--- a/encyclopedia/templates/encyclopedia/error.html
+++ b/encyclopedia/templates/encyclopedia/error.html
@@ -1,5 +1,5 @@
 {% extends "encyclopedia/wiki.html" %}
 {% block error %}
 
-    <h1> Page Not Found Error404!</h1>
+    <h1 style="text-align: middle"> Page Not Found Error404!</h1>
 {% endblock %}
