--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -8,27 +8,27 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link href="{% static 'encyclopedia/styles.css' %}" rel="stylesheet">
     </head>
-    <body>
-        <div class="navbar navbar-expand-lg bg-light">
-            <div class="col-lg-2 col-md-3">
+    <body style="background-color:rgb(221, 230, 176);">
+        <div class="navbar navbar-expand-lg">
+            <div class="col-lg-2 col-md-6">
                 <h2>Wikipedia</h2>
                 <form action="{% url 'encyclopedia:search'  %}" method="POST">
                     {% csrf_token %}
                     <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
-                <div>
+                <div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large;">
                     <a href="{% url 'encyclopedia:index' %}">Home</a>
                 </div>
-                <div>
+                <div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large;">
                     <a href="{% url 'encyclopedia:create' %}">Create new page</a>
                 </div>
-                <div>
+                <div style="font-family: Georgia, 'Times New Roman', Times, serif; font-size: large;">
                     <a href="{% url 'encyclopedia:random_e' %}">Random Page</a>
                 </div>
                 {% block nav %}
                 {% endblock %}
             </div>
-            <div class="main col-lg-10 col-md-9">
+            <div class="main col-lg-10 col-md-12">
                 {% block body %}
                 {% endblock %}
             </div>
